# push_swap

./: .Makefile.swp  CMakeLists.txt  Makefile  README.md  a.out  checker  checker_rus  errorstempfile.txt  ft_push_swap.c  parsing_utils.c  push_swap  push_swap.c  push_swap.h  test.c  test.txt  thinks.txt
a.out.dSYM/Contents/Resources/DWARF/: a.out
checker.dSYM/Contents/Resources/DWARF/: checker
chuzhak/: CMakeLists.txt  Makefile  checker  push_swap  visualizer
chuzhak/minilibx_macos/: mlx_rgb.c
includes/: .push_swap.h.swp  checker.h  push_swap.h
libft/: .ft_atoi.c.swp  Makefile  a.out  ft_atoi.c  ft_memcpy.c  ft_strsplit.c  ft_strsub.c  get_next_line.c
libft/a.out.dSYM/Contents/Resources/DWARF/: a.out
libft/ft_printf/: printf.h
libft/includes/: get_next_line.h  libft.h
push_swap.dSYM/Contents/Resources/DWARF/: push_swap
src/: checker.c  ft_check_dupl.c  ft_checker.c  ft_push_swap.c  ft_rr.c  ft_rrr.c  ft_solution_ps.c  push_swap.c  rules.h  rules_pp.c  rules_rr.c  rules_ss.c
src/parser/: error_and_free.c  ft_check_dupl.c  ft_check_duplicates.c  ft_check_sort.c  ft_is_it_sorted.c  init_array.c  parsing_utils.c  parsing_utils2.c
src/rules/: .rules_ss.c.swp  rules.h  rules_pp.c  rules_rr.c  rules_rrr.c  rules_ss.c
src/solver/: ft_general_solver_ps.c  ft_generals_solvers_utils2_ps.c  ft_generals_solvers_utils_ps.c  ft_quick_sort_arr.c  ft_solver_ps.c
