cmake_minimum_required(VERSION 3.15)
project(push_swap C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/ft_printf)
include_directories(libft/ftoa)
include_directories(libft/includes)

add_executable(push_swap
        includes/push_swap.h
        libft/ft_printf/apply_spec.c
        libft/ft_printf/apply_spec.h
        libft/ft_printf/apply_spec2.c
        libft/ft_printf/apply_spec3.c
        libft/ft_printf/apply_spec4.c
        libft/ft_printf/apply_spec5.c
        libft/ft_printf/apply_spec6.c
        libft/ft_printf/arg_extractors.c
        libft/ft_printf/arg_extractors2.c
        libft/ft_printf/conv_int.c
        libft/ft_printf/conv_int2.c
        libft/ft_printf/conv_other.c
        libft/ft_printf/conv_wrappers_int.c
        libft/ft_printf/conv_wrappers_int2.c
        libft/ft_printf/conv_wrappers_other.c
        libft/ft_printf/find_action.c
        libft/ft_printf/fp_type.h
        libft/ft_printf/printf.c
        libft/ft_printf/printf.h
        libft/ft_printf/read_spec.c
        libft/ft_printf/read_spec.h
        libft/ft_printf/read_spec2.c
        libft/ftoa/decimal_arithmetic.c
        libft/ftoa/decimal_arithmetic2.c
        libft/ftoa/decimal_arithmetic3.c
        libft/ftoa/decimal_arithmetic4.c
        libft/ftoa/decimal_arithmetic5.c
        libft/ftoa/ft_fp.h
        libft/ftoa/ftoa.c
        libft/ftoa/ftoa2.c
        libft/includes/bbtree_utils.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/ft_array_subtract.c
        libft/ft_atoi.c
        libft/ft_bbtree_utils.c
        libft/ft_bsort_int.c
        libft/ft_bzero.c
        libft/ft_del.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_itoa_base.c
        libft/ft_lstadd.c
        libft/ft_lstappend.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_max_int.c
        libft/ft_maxval_int.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memdup.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_min_int.c
        libft/ft_minval_int.c
        libft/ft_print_array.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strrev.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_swap.c
        libft/ft_swapint.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        src/parser/error_and_free.c
        src/parser/ft_check_dupl.c
        src/parser/ft_check_sort.c
        src/parser/parsing_utils.c
        src/parser/parsing_utils2.c
        src/rules/rules_pp.c
        src/rules/rules_rr.c
        src/rules/rules_rrr.c
        src/rules/rules_ss.c
        src/solver/ft_general_solver_ps.c
        src/solver/ft_generals_solvers_utils_ps.c
        src/solver/ft_quick_sort_arr.c
        src/solver/ft_solver_ps.c
        src/push_swap.c)
