cmake_minimum_required(VERSION 3.15)
project(chuzhak C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)
include_directories(minilibx_macos)

add_executable(chuzhak
        includes/error_message.h
        includes/push_swap.h
        includes/visualizer.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/sources/ft_arrindex.c
        libft/sources/ft_atoi.c
        libft/sources/ft_bzero.c
        libft/sources/ft_isalnum.c
        libft/sources/ft_isalpha.c
        libft/sources/ft_isascii.c
        libft/sources/ft_isblank.c
        libft/sources/ft_isdigit.c
        libft/sources/ft_isdigit_base.c
        libft/sources/ft_isint.c
        libft/sources/ft_islower.c
        libft/sources/ft_isnum.c
        libft/sources/ft_isprefix.c
        libft/sources/ft_isprint.c
        libft/sources/ft_isspace.c
        libft/sources/ft_isupper.c
        libft/sources/ft_itoa.c
        libft/sources/ft_lstadd.c
        libft/sources/ft_lstaddback.c
        libft/sources/ft_lstdel.c
        libft/sources/ft_lstdelone.c
        libft/sources/ft_lstiter.c
        libft/sources/ft_lstmap.c
        libft/sources/ft_lstnew.c
        libft/sources/ft_memalloc.c
        libft/sources/ft_memccpy.c
        libft/sources/ft_memchr.c
        libft/sources/ft_memcmp.c
        libft/sources/ft_memcpy.c
        libft/sources/ft_memdel.c
        libft/sources/ft_memmove.c
        libft/sources/ft_memset.c
        libft/sources/ft_percent.c
        libft/sources/ft_pow_int.c
        libft/sources/ft_putchar.c
        libft/sources/ft_putchar_fd.c
        libft/sources/ft_putendl.c
        libft/sources/ft_putendl_fd.c
        libft/sources/ft_putnbr.c
        libft/sources/ft_putnbr_fd.c
        libft/sources/ft_putstr.c
        libft/sources/ft_putstr_fd.c
        libft/sources/ft_signedlen.c
        libft/sources/ft_strcat.c
        libft/sources/ft_strchr.c
        libft/sources/ft_strchrs.c
        libft/sources/ft_strclr.c
        libft/sources/ft_strcmp.c
        libft/sources/ft_strcpy.c
        libft/sources/ft_strdel.c
        libft/sources/ft_strdup.c
        libft/sources/ft_strequ.c
        libft/sources/ft_striter.c
        libft/sources/ft_striteri.c
        libft/sources/ft_strjoin.c
        libft/sources/ft_strlcat.c
        libft/sources/ft_strlen.c
        libft/sources/ft_strlwr.c
        libft/sources/ft_strmap.c
        libft/sources/ft_strmapi.c
        libft/sources/ft_strncat.c
        libft/sources/ft_strncmp.c
        libft/sources/ft_strncpy.c
        libft/sources/ft_strndup.c
        libft/sources/ft_strnequ.c
        libft/sources/ft_strnew.c
        libft/sources/ft_strnlen.c
        libft/sources/ft_strnstr.c
        libft/sources/ft_strrchr.c
        libft/sources/ft_strrev.c
        libft/sources/ft_strsplit.c
        libft/sources/ft_strsplit_free.c
        libft/sources/ft_strsplit_len.c
        libft/sources/ft_strstr.c
        libft/sources/ft_strsub.c
        libft/sources/ft_strsubchr.c
        libft/sources/ft_strtrim.c
        libft/sources/ft_strupr.c
        libft/sources/ft_tolower.c
        libft/sources/ft_toupper.c
        libft/sources/ft_unsignedlen.c
        libft/sources/ft_wchar_size.c
        libft/sources/ft_wcslen.c
        libft/sources/get_next_line.c
        minilibx_macos/font.c
        minilibx_macos/mlx.h
        minilibx_macos/mlx_init_loop.m
        minilibx_macos/mlx_int.h
        minilibx_macos/mlx_int_str_to_wordtab.c
        minilibx_macos/mlx_new_image.m
        minilibx_macos/mlx_new_window.h
        minilibx_macos/mlx_new_window.m
        minilibx_macos/mlx_rgb.c
        minilibx_macos/mlx_shaders.c
        minilibx_macos/mlx_xpm.c
        sources/checker.c
        sources/command.c
        sources/direction.c
        sources/draw.c
        sources/draw_utils.c
        sources/free.c
        sources/index.c
        sources/init.c
        sources/markup.c
        sources/parse.c
        sources/print.c
        sources/push.c
        sources/push_swap.c
        sources/reverse_rotate.c
        sources/rotate.c
        sources/solve.c
        sources/solve_a.c
        sources/solve_b.c
        sources/stack.c
        sources/swap.c
        sources/utils.c
        sources/validate.c
        sources/visualizer.c)
